k8s/apps/repo-user/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-user
  namespace: apps
  labels:
    app: repo-user
spec:
  replicas: 1 # TODO: make it 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: repo-user
  template:
    metadata:
      labels:
        app: repo-user
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: repo-user
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-02/repo-user:v1.0.14
          imagePullPolicy: IfNotPresent
          #command: ["tail", "-f", "/dev/null"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
