k8s/apps/repo-user/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repo-user
  namespace: apps
  labels:
    app: repo-user
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: repo-user
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: repo-user
                port:
                  number: 8080
